@@ -25,7 +25,7 @@ public class RegistroSdisGseqEstadoExport extends GenericExportComponent {
 
     @Override
     protected List<Object> getSelectionItems() {
-        return Arrays.asList(InstrumentoObservacional.getInstance().getCriterios());
+        return List.of(InstrumentoObservacional.getInstance().getCriterios());
     }
 
     @Override
