@@ -46,7 +46,7 @@ public class Theme6ExportComponent extends GenericExportComponent {
 
     @Override
     protected List<Object> getSelectionItems() {
-        return Arrays.asList(InstrumentoObservacional.getInstance().getCriterios());
+        return List.of(InstrumentoObservacional.getInstance().getCriterios());
     }
 
     @Override
